# preen

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: api.md  checks.md  conf.py  configuration.md  index.md  installation.md  usage.md
preen/: __init__.py  cli.py  config.py  interactive.py  syncer.py
preen/checks/: base.py  ci_matrix.py  citation.py  codespell.py  deps.py  deptree.py  links.py  pydoclint.py  pyright.py  ruff.py  runner.py  structure.py  tests.py  version.py
preen/commands/: bump.py  fix.py  init.py  release.py
preen/templates/: manager.py
preen/templates/files/: .gitignore.tmpl  README.md.tmpl  __init__.py.tmpl  cli.py.tmpl  pyproject.toml.tmpl  test_basic.py.tmpl
src/preen/: __init__.py  adopt.py  cli.py  config.py  interactive.py
src/preen/checks/: __init__.py  base.py  ci_matrix.py  citation.py  codespell.py  deps.py  deptree.py  links.py  pydoclint.py  pyright.py  ruff.py  runner.py  structure.py  template.py  tests.py  version.py
src/preen/commands/: adopt.py  fix.py  new.py  release.py  update.py
tests/: test_adopt_files.py  test_adopt_pyproject.py  test_checks_misc.py  test_sync.py  test_template_check.py
