[build-system]
requires = ["uv", "uv-build"]
build-backend = "uv_build"

[project]
name = "preen"
version = "0.1.0"
description = "An opinionated, agentic CLI for Python package hygiene and release"
authors = [
    { name = "Gaurav Sood", email = "gsood@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9",
    "rich>=13.5",
    "PyYAML>=6.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = "-q"
