[project]
name = "preen"
description = "Conformance and adoption CLI for the py-canon fleet standard"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gaurav Sood", email = "contact@gsood.com" }]
requires-python = ">=3.12"
dynamic = ["version"]
keywords = ["packaging", "release", "conformance", "copier", "cli", "python"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.27.0",
    "rich>=15.0.0",
    "PyYAML>=6.0",
    "httpx>=0.24.0",
    "copier>=9",
    "tomlkit>=0.13",
    "ruff>=0.15.21",
    "pyright>=1.1.411",
    "pydoclint>=0.9.1",
    "codespell>=2.4.3",
    "deptry>=0.20",
]

[project.urls]
Homepage = "https://github.com/gojiplus/preen"
Documentation = "https://gojiplus.github.io/preen/"
Repository = "https://github.com/gojiplus/preen"
"Bug Tracker" = "https://github.com/gojiplus/preen/issues"

[project.scripts]
preen = "preen.cli:run"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"

[tool.hatch.build.targets.wheel]
packages = ["src/preen"]

[dependency-groups]
dev = [
    "pre-commit>=4",
    { include-group = "test" },
]
test = ["pytest>=9.1.1", "pytest-cov>=7.1.0"]
docs = [
    "sphinx>=8",
    "py-canon @ git+https://github.com/gojiplus/py-canon@v1",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
external = ["DOC"]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "D", "S", "SIM", "T20", "PT", "RUF"]
# D203/D213: fleet standard (google convention). S603/S607: preen's job is
# driving developer tools (ruff, git, uv, copier) via subprocess.
ignore = ["D203", "D213", "S603", "S607"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]
"docs/**" = ["D"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-class-attributes = false
allow-init-docstring = true
exclude = '\.venv|tests|docs'

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.preen]
